--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Solution for Assignment-3</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/index.css">
+  </head>
+<body>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+        <div class="navbar-header">
+          <div class="navbar-header">
+            <div class="navbar-brand">
+              <p>Food, LLC</p>
+            </div>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+        </div>   
+        <div id="collapsable-nav" class="collapse navbar-collapse d-lg-none d-md-none d-sm-block d-xs-block">
+          <ul id="nav-list" class="nav navbar-nav navbar-right">
+           <li>
+             Chicken
+           </li>
+           <li>
+            Beef
+           </li>
+           <li>
+              Sushi</span>
+           </li>
+         </ul><!-- #nav-list -->
+       </div><!-- .collapse .navbar-collapse --> 
+    </nav>
+  </header>
+   
+ <div class="container">
+  <div class="header">Our Menu</div>
+  <div class="row">
+    <div class="item col-lg-4 col-md-6 col-sm-12">
+    	<section>
+       <h2 class="chicken">Chicken</h2>
+       <p>A traditional Barberton chicken dinner with four pieces of fried chicken, cole slaw, hot sauce, and fries served by Milich's Village Inn</p>
+     </section>
+    </div>
+    <div class="item col-lg-4 col-md-6 col-sm-12">
+        <section>
+      	 <h2 class="beef">Beef</h2>
+       	<p>Succulent roast topside of beef, made especially irresistible with a mustard crust, piquant shallots and red wine enriched gravy</p>
+     	</section>
+    </div>
+    <div class="item col-lg-4 col-md-12 col-sm-12">
+    	<section>
+		<h2 class="sushi">Sushi</h2>
+       	<p>Mushroom biryani is the classic vegetarian version of biryani with meaty mushrooms, tender fluffy rice and flavorful spices</p>
+     </section>
+  </div>
+</div>
 
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
+</body>
+</html>
